fix: overflow for text elements

--- a/src/components/playerInfo/styles.less
+++ b/src/components/playerInfo/styles.less
@@ -20,6 +20,7 @@
   text-align: right;
   font-size: 16px;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .user-info__rating {
